[tool.poetry]
name = "pdf2jpg"
version = "0.1.0"
description = ""
authors = ["danpe919"]

[tool.poetry.dependencies]
python = "^3.7"
pdf2image = "^1.14.0"
pyinstaller = "^4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
